--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </footer>
     <p class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="https://www.frontendmentor.io/profile/Vbanety" target="_blank">Vinicius Batista</a>.
+        Practice Code by <a href="#" target="_blank">Elraey</a>.
       </p>
     
 
